# bayes_dashboard

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
src/bayes_dashboard/: __init__.py  bayes_graph.py  custom_phrases.py  falsepos_info.py  ids.py  layout.py  likelihood_info.py  marginal_info.py  posterior_info.py  prior_info.py  scenario_dropdown.py
