[tool.poetry]
name = "bayes-dashboard"
version = "0.2.0"
description = ""
authors = ["Sam Hill <s.hill@yorksj.ac.uk>"]
readme = "README.md"
packages = [{include = "bayes_dashboard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
dash = "^3.0.4"
dash-bootstrap-components = "^2.0.2"
pandas = "^2.2.3"
plotly = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
