[tool.poetry]
name = "bayes-dashboard"
version = "0.2.16"
description = ""
authors = ["Sam Hill <s.hill@yorksj.ac.uk>"]
readme = "README.md"
packages = [{include = "bayes_dashboard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
dash = "^3.0.4"
dash-bootstrap-components = "^2.0.2"
plotly = "^6.1.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
